--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   var tompositif = 'mau dong';
   var tomnegatif = 'engga ah';
     
-    //async function menuju(){pesanwhatsapp = "Makasih banyak calon suamiku, i love you too ganteng❤️";await swals.fire('OK!', 'Kirim jawabannya ke WhatsApp aku, ya!', 'success');window.location = "https://api.whatsapp.com/send?phone=+6281239916500" + pesanwhatsapp;}
+    async function menuju(){}
 </script>
 <script src="script.js"></script>
 <!-- Sampai Sini -->
